
(Changes that can break existing programs are marked with a "*")

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

### Tools:

* #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
  does with an unrecognised file.
  (David Allsopp, review by Antonin Décimo and Sébastien Hinderer)

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:


OCaml 5.4.0
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- #13340: Array literal syntax can now be used to denote values of type `'a
  array` and `floatarray`, both in expressions and patterns. The compiler
  disambiguates each case by using contextual type information (assuming `'a
  array` by default).
  (Nicolás Ojeda Bär, review by Richard Eisenberg, Jeremy Yallop, Jacques
  Garrigue, and Gabriel Scherer)
- #13097: Immutable arrays
  (Antal Spector-Zabusky and Olivier Nicole, review by Gabriel Scherer,
  Jeremy Yallop and Vincent Laviron)

- #13498: Tuple fields are now optionally labeled.
  (Ryan Tjoa and Chris Casinghino, review by Gabriel Scherer, Chris Casinghino,
  and Leo White)

### Runtime system:

- #13819: Fix field initialisation bug in runtime events subsystem.
  (Nick Barnes, review by Gabriel Scherer).

- #13785: Add `Runtime_events.Timestamp.get_current`.
  (Simon Cruanes)

- #13774: Fix for inaccurate live blocks/words stats in compaction.
  (Sadiq Jaffer, report by KC Sivaramakrishnan and Jan Midtgaard, review by
  Gabriel Scherer)

- #13773: Ensure that shared pool owners are correctly set on pool adoption.
  (Stephen Dolan, review by Sadiq Jaffer and Gabriel Scherer)

* #11449, #13497: Add caml_stat_char_array_{to,of}_os functions allowing
  conversion of string data which may contain NUL characters. Correct