@@ -1,7 +1,9 @@
 load_printer printer.cmo
-install_printer Printer.p
-set print_depth 2
+install_printer Printer.print_generic
 break @ Debuggee 18
 run
+p _d
+install_printer Printer.p
+set print_depth 2
 print x
 quit
